# BigInt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arithmeticBigInt17.c
include/: README.md  bigint.h
src/: bigint.c
tests/: CMakeLists.txt  addStringTest2.c  addStringTest3.c  addStringTest4.c  arithmeticBigInt1.c  arithmeticBigInt10.c  arithmeticBigInt11.c  arithmeticBigInt12.c  arithmeticBigInt13.c  arithmeticBigInt14.c  arithmeticBigInt15.c  arithmeticBigInt17.c  arithmeticBigInt18.c  arithmeticBigInt19.c  arithmeticBigInt2.c  arithmeticBigInt20.c  arithmeticBigInt21.c  arithmeticBigInt22.c  arithmeticBigInt23.c  arithmeticBigInt24.c  arithmeticBigInt3.c  arithmeticBigInt4.c  arithmeticBigInt5.c  arithmeticBigInt6.c  arithmeticBigInt7.c  arithmeticBigInt8.c  arithmeticBigInt9.c  compareBigInt1.c  compareBigInt2.c  compareBigInt3.c  compareBigInt4.c  compareBigInt5.c  compareBigInt6.c  compareBigInt7.c  compareBigInt8.c  compareBigInt9.c  comparetest1.c  comparetest2.c  comparetest3.c  comparetest4.c  (+11 more)
