enable_testing()

add_executable(1 createBigInt1.c ${src})
add_test(CreateBigInt1 1)

add_executable(2 createBigInt2.c ${src})
add_test(CreateBigInt2 2)

add_executable(3 createBigInt3.c ${src})
add_test(CreateBigInt3 3)

add_executable(4 createBigInt4.c ${src})
add_test(CreateBigInt4 4)

add_executable(1a arithmeticBigInt1.c ${src})
add_test(ArithmeticBigInt1 1a)

add_executable(2a arithmeticBigInt2.c ${src})
add_test(ArithmeticBigInt2 2a)

add_executable(3a arithmeticBigInt3.c ${src})
add_test(ArithmeticBigInt3 3a)

add_executable(4a arithmeticBigInt4.c ${src})
add_test(ArithmeticBigInt4 4a)

add_executable(5a arithmeticBigInt5.c ${src})
add_test(ArithmeticBigInt5 5a)

add_executable(6a arithmeticBigInt6.c ${src})
add_test(ArithmeticBigInt6 6a)

add_executable(7a arithmeticBigInt7.c ${src})
add_test(ArithmeticBigInt7 7a)

add_executable(8a arithmeticBigInt8.c ${src})
add_test(ArithmeticBigInt8 8a)

add_executable(9a arithmeticBigInt9.c ${src})
add_test(ArithmeticBigInt9 9a)

add_executable(10a arithmeticBigInt10.c ${src})
add_test(ArithmeticBigInt10 10a)

add_executable(11a arithmeticBigInt11.c ${src})
add_test(ArithmeticBigInt11 11a)

add_executable(12a arithmeticBigInt12.c ${src})
add_test(ArithmeticBigInt12 12a)

add_executable(13a arithmeticBigInt13.c ${src})
add_test(ArithmeticBigInt13 13a)

add_executable(14a arithmeticBigInt14.c ${src})
add_test(ArithmeticBigInt14 14a)

add_executable(15a arithmeticBigInt15.c ${src})
add_test(ArithmeticBigInt15 15a)

add_executable(16a arithmeticBigInt16.c ${src})
add_test(ArithmeticBigInt16 16a)

add_executable(17a arithmeticBigInt17.c ${src})
add_test(ArithmeticBigInt17 17a)

add_executable(18a arithmeticBigInt18.c ${src})
add_test(ArithmeticBigInt18 18a)

add_executable(19a arithmeticBigInt19.c ${src})
add_test(ArithmeticBigInt19 19a)

add_executable(20a arithmeticBigInt20.c ${src})
add_test(ArithmeticBigInt20 20a)

add_executable(21a arithmeticBigInt21.c ${src})
add_test(ArithmeticBigInt21 21a)

add_executable(22a arithmeticBigInt22.c ${src})
add_test(ArithmeticBigInt22 22a)

add_executable(1c compareBigInt1.c ${src})
add_test(CompareBigInt1 1c)

add_executable(2c compareBigInt2.c ${src})
add_test(CompareBigInt2 2c)

add_executable(3c compareBigInt3.c ${src})
add_test(CompareBigInt3 3c)

add_executable(4c compareBigInt4.c ${src})
add_test(CompareBigInt4 4c)

add_executable(5c compareBigInt5.c ${src})
add_test(CompareBigInt5 5c)
